--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8">
 		<title>Ami Cycles</title>
-		<script type="text/javascript" src="main.js"></script>
+		<script type="text/javascript" src="dma.js" type="module"></script>
+		<script type="text/javascript" src="dma_visualizer.js" type="module"></script>
+		<script type="text/javascript" src="main.js" type="module"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<canvas id="dmaVisualizer">
 			Your browser doesn't support canvas. Wtf?
 		</canvas>
+		<div id="rightPanel">
+			<form>
+				<input id="addCycle" type="button" value="Add cycle">
+			</form>
+		</div>
 	</body>
 </html>
