--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script type="text/javascript" src="dma_visualizer.js" type="module"></script>
 		<script type="text/javascript" src="ui.js" type="module"></script>
 		<script type="text/javascript" src="main.js" type="module"></script>
+		<script type="text/javascript" src="tooltip.js" type="module"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
