Added top-priority cycles, visualizing Copper DMA usage based on coplist

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script type="text/javascript" src="ui.js" type="module"></script>
 		<script type="text/javascript" src="main.js" type="module"></script>
 		<script type="text/javascript" src="tooltip.js" type="module"></script>
+		<script type="text/javascript" src="coplist.js" type="module"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
@@ -45,6 +46,11 @@
 							<option value="6">6 bpp: EHB/HAM</option>
 						</select>
 					</label>
+				</fieldset>
+
+				<fieldset>
+					<legend>Copperlist</legend>
+					<textarea id="copperInput" class="coplist"></textarea>
 				</fieldset>
 				<input id="apply" type="button" value="Apply">
 				<input id="addCycle" type="button" value="Add cycle">
